added an endpoint to accept deal
