# routes/api.php
@@ -4,6 +4,7 @@ use App\Http\Controllers\API\AuthController;
 use App\Http\Controllers\API\ItemsController;
 use App\Http\Controllers\API\UserController;
 use App\Http\Controllers\API\BidsController;
+use App\Http\Controllers\API\DealsController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -40,6 +41,10 @@ Route::prefix('v1')->group(function () {
 
     Route::prefix('bids')->group(function() {
         Route::post('/create', [BidsController::class, 'createBid']);
-        Route::post('/make-bid', [BidsController::class, 'makeBid']);
+    });
+
+    Route::prefix('deals')->group(function () {
+        Route::post('/create', [DealsController::class, 'createDeal']);
+        Route::post('/accept', [DealsController::class, 'acceptDeal']);
     });
 });
